font size error on mobile fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,7 +81,11 @@ body {
 @media (max-width: 1380px) {
   html,
   body {
-    font-size: 16px;
+    font-size: 15px;
+    
     line-height: normal;
+  }
+  .dev-icons-languages {
+    display: none;
   }
 }
